logs/coreinit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coreinit'...
Listing './lib/python3.5/site-packages/coreinit/db'...
Listing './lib/python3.5/site-packages/coreinit/db/drivers'...
Listing './lib/python3.5/site-packages/coreinit/logger'...
Listing './lib/python3.5/site-packages/coreinit/mgmt'...
Listing './lib/python3.5/site-packages/coreinit/msg'...
Listing './lib/python3.5/site-packages/coreinit/service'...
Listing './lib/python3.5/site-packages/coreinit/service/mixins'...
Compiling './lib/python3.5/site-packages/coreinit/settings.py'...
***   File "./lib/python3.5/site-packages/coreinit/settings.py", line 17
    print "Overriding variable %s" % variable
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coreinit/utils'...
Listing './lib/python3.5/site-packages/coreinit-15.11.18.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
